[gd_scene load_steps=11 format=3 uid="uid://b35gdu3sam2dd"]

[ext_resource type="Script" path="res://HUD.gd" id="1_4jmjs"]
[ext_resource type="Texture2D" uid="uid://h52e0rohe6p1" path="res://assets/locations/Background.png.png" id="2_lio6s"]
[ext_resource type="Script" path="res://HuntButton.gd" id="3_wxwgq"]
[ext_resource type="Script" path="res://HuntResultDisplay.gd" id="5_6acxs"]
[ext_resource type="FontFile" uid="uid://bgfqf10ynpro1" path="res://assets/fonts/VIRUST.ttf" id="6_ndfnc"]
[ext_resource type="Script" path="res://combat_log.gd" id="6_o5drk"]
[ext_resource type="Script" path="res://AvatarMenu.gd" id="7_wne5q"]
[ext_resource type="Script" path="res://EquipmentMenu.gd" id="8_d4cyh"]
[ext_resource type="Script" path="res://game_manager.gd" id="10_57m1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgssb"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jmjs")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jmjs")

[node name="TextureRect" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lio6s")
expand_mode = 3

[node name="MainHbox" type="HBoxContainer" parent="HUD"]
layout_mode = 0
offset_left = 851.0
offset_top = 19.0
offset_right = 1087.0
offset_bottom = 69.0

[node name="MainVbox" type="VBoxContainer" parent="HUD/MainHbox"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="HUD/MainHbox/MainVbox"]
layout_mode = 2
size_flags_vertical = 1
text = "Gold: 0"

[node name="XPLabel" type="Label" parent="HUD/MainHbox/MainVbox"]
layout_mode = 2
text = "XP : 0"

[node name="HuntButton" type="Button" parent="HUD/MainHbox"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_colors/font_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_fonts/font = ExtResource("6_ndfnc")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_dgssb")
text = "Hunt"
script = ExtResource("3_wxwgq")

[node name="HuntCooldownTimer" type="Timer" parent="HUD/MainHbox/HuntButton"]
wait_time = 1.681
one_shot = true

[node name="HuntResultDisplay" type="Panel" parent="HUD"]
layout_mode = 0
offset_left = 456.0
offset_top = 153.0
offset_right = 704.0
offset_bottom = 409.0
script = ExtResource("5_6acxs")

[node name="MainVbox" type="VBoxContainer" parent="HUD/HuntResultDisplay"]
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 103.0
offset_bottom = 120.0

[node name="EnemyLabel" type="Label" parent="HUD/HuntResultDisplay/MainVbox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="HUD/HuntResultDisplay/MainVbox"]
layout_mode = 2

[node name="EnemyGraphic" type="TextureRect" parent="HUD/HuntResultDisplay/MainVbox"]
layout_mode = 2
expand_mode = 5

[node name="RewardsLabel" type="Label" parent="HUD/HuntResultDisplay/MainVbox"]
layout_mode = 2

[node name="GoldXPContainer" type="HBoxContainer" parent="HUD/HuntResultDisplay/MainVbox"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="HUD/HuntResultDisplay/MainVbox/GoldXPContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="HUD/HuntResultDisplay/MainVbox/GoldXPContainer"]
layout_mode = 2

[node name="CombatLog" type="Panel" parent="HUD"]
layout_mode = 0
offset_left = 864.0
offset_top = 442.0
offset_right = 1140.0
offset_bottom = 635.0
script = ExtResource("6_o5drk")

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/CombatLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CombatLog/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/CombatLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HUD/CombatLog/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 3

[node name="Label" type="Label" parent="HUD/CombatLog/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="AvatarMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 82.0
offset_right = 388.0
offset_bottom = 461.0
script = ExtResource("7_wne5q")

[node name="AvatarSprite" type="TextureRect" parent="AvatarMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HelmetButton" type="Button" parent="AvatarMenu"]
layout_mode = 2
anchor_left = 0.366
anchor_top = 0.037
anchor_right = 0.607
anchor_bottom = 0.23
offset_left = -0.0480118
offset_top = -0.0229998
offset_right = -0.0960236
offset_bottom = -0.169998
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="BreastplateButton" type="Button" parent="AvatarMenu"]
layout_mode = 0
offset_left = 241.0
offset_top = 109.0
offset_right = 305.0
offset_bottom = 162.0

[node name="GlovesButton" type="Button" parent="AvatarMenu"]
layout_mode = 0
offset_left = 243.0
offset_top = 194.0
offset_right = 312.0
offset_bottom = 265.0

[node name="GreavesButton" type="Button" parent="AvatarMenu"]
layout_mode = 0
offset_left = 17.0
offset_top = 201.0
offset_right = 77.0
offset_bottom = 264.0

[node name="ShoesButton" type="Button" parent="AvatarMenu"]
layout_mode = 0
offset_left = 239.0
offset_top = 291.0
offset_right = 302.0
offset_bottom = 355.0

[node name="WeaponButton" type="Button" parent="AvatarMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="EquipmentMenu" type="Panel" parent="AvatarMenu"]
layout_mode = 1
offset_left = 165.0
offset_top = 5.0
offset_right = 530.0
offset_bottom = 365.0
script = ExtResource("8_d4cyh")

[node name="GridContainer" type="GridContainer" parent="AvatarMenu/EquipmentMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GameManager" type="Node" parent="."]
script = ExtResource("10_57m1h")
